@@ -3,3 +3,6 @@
 *.less linguist-vendored
 *.js linguist-vendored
 *.html linguist-vendored
+tests/ export-ignore
+phpunit.xml export-ignore
+
